--- a/.gitconfig
+++ b/.gitconfig
@@ -1,3 +1,8 @@
 [remote "origin"]
     url = git@github.com:huangyingw/cursor_user.git 
     fetch = +refs/heads/*:refs/remotes/origin/*
+[gsync]
+    remote = origin
+    target = 33b79c39c4ea379029fc77c03aaaca007d8aab9f
+[push]
+    remote = origin
