--- a/settings.json
+++ b/settings.json
@@ -7,12 +7,15 @@
         "**/*.bak": true,
         "**/*.diff": true,
         "**/*.findresult": true,
+        "**/*.lck": true,
         "**/*.log": true,
         "**/*.runresult": true,
         "**/*.tmp": true,
         "**/*conflicted copy*": true,
         "**/cscope.*.out": true,
         "**/cscope.out*": true,
+        "**/cscope.small.files": true,
+        "**/running.time": true,
         "files.proj": true,
         "rsync.files": true
     },
