--- a/settings.json
+++ b/settings.json
@@ -26,5 +26,6 @@
     "redhat.telemetry.enabled": true,
     "vim.visualModeKeyBindings": [],
     "makefile.configureOnOpen": true,
-    "cursor.general.gitGraphIndexing": "enabled"
+    "cursor.general.gitGraphIndexing": "enabled",
+    "cursor.composer.defaultMode": "agent"
 }
