--- a/settings.json
+++ b/settings.json
@@ -16,7 +16,7 @@
         "**/cscope.out*": true,
         "**/cscope.small.files": true,
         "**/running.time": true,
-        "files.proj": true,
+        "files.proj*": true,
         "prunefix.conf": true,
         "includefile.conf": true,
         "prunefile.conf": true,
